fix: fixes on links

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -1,6 +1,6 @@
 - title: "Home"
-  url: "/home"
+  url: ""
 - title: "Games"
-  url: "/games"
+  url: "games"
 - title: "About"
-  url: "/about"
+  url: "about"
