--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,10 @@
 title: Muriki Game Studios
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Muriki Game Studios is an indie game development team based in Brazil
+  formed in 2022.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://murikigamestudios.com.br" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  muriki-game-studios
 
 # Build settings
