--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Muriki Game Studios
+title: Muriki Game Studio
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Muriki Game Studios is an indie game development team based in Brazil
   formed in 2022.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://murikigamestudios.com.br" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  muriki-game-studios
+url: "https://murikistudio.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  muriki-studio
 
 # Build settings
 theme:
