--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Muriki Game Studio
-email:
+email: contact@murikistudio.com
 description: >- # this means to ignore newlines until "baseurl:"
   Muriki Game Studios is an indie game development team based in Brazil
   formed in 2022.
