--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_repo:  murikistudio.com.br
 theme:
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
