--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -13,7 +13,7 @@
 - name: Discord
   icon: discord
   show_on_footer: false
-  url: "https://discord.gg/X5mthm2q8q"
+  url: "https://discord.gg/gr8u2EEXz9"
 - name: TikTok
   icon: tiktok
   show_on_footer: true
