feat: convert all images to webp

--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,4 +1,4 @@
 - title: "Mole Maniacs"
   url: "games/mole-maniacs"
-  icon: "mole-maniacs/logo.png"
+  icon: "mole-maniacs/logo.webp"
   background: "#77529b"
