--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -30,6 +30,10 @@
   icon: gamejolt
   show_on_footer: false
   url: "https://gamejolt.com/@murikistudio"
+- name: LinkedIn
+  icon: linkedin
+  show_on_footer: false
+  url: "https://www.linkedin.com/company/murikistudio"
 - name: Facebook
   icon: facebook
   show_on_footer: false
