--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,7 +5,7 @@
 - name: Discord
   icon: discord
   show_on_footer: true
-  url: "https://discord.gg/gr8u2EEXz9"
+  url: "https://discord.gg/f35uuhCvQn"
 - name: Twitter
   icon: twitter
   show_on_footer: true
