--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,10 +6,10 @@
   icon: discord
   show_on_footer: true
   url: "https://discord.gg/f35uuhCvQn"
-- name: Twitter
+- name: X
   icon: twitter
   show_on_footer: true
-  url: "https://twitter.com/murikistudio"
+  url: "https://x.com/murikistudio"
 - name: Instagram
   icon: instagram
   show_on_footer: true
@@ -20,24 +20,16 @@
   url: "https://www.tiktok.com/@murikistudio"
 - name: GitHub
   icon: github
-  show_on_footer: true
+  show_on_footer: false
   url: "https://github.com/murikistudio"
 - name: itch.io
   icon: itch-io
   show_on_footer: true
   url: "https://murikistudio.itch.io/"
-- name: Game Jolt
-  icon: gamejolt
-  show_on_footer: false
-  url: "https://gamejolt.com/@murikistudio"
 - name: LinkedIn
   icon: linkedin
   show_on_footer: false
   url: "https://www.linkedin.com/company/murikistudio"
-- name: Facebook
-  icon: facebook
-  show_on_footer: false
-  url: "https://www.facebook.com/murikistudio"
 - name: contact@murikistudio.com.br
   icon: email
   show_on_footer: false
