feat: add zombies and bullets page

--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,3 +1,7 @@
+- title: "Zombies & Bullets"
+  url: "games/zombies-and-bullets"
+  icon: "zombies-and-bullets/logo.webp"
+  background: "#72b0de"
 - title: "Mole Maniacs"
   url: "games/mole-maniacs"
   icon: "mole-maniacs/logo.webp"
