--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,7 +7,7 @@
   show_on_footer: true
   url: "https://discord.gg/f35uuhCvQn"
 - name: X
-  icon: twitter
+  icon: x
   show_on_footer: true
   url: "https://x.com/murikistudio"
 - name: Instagram
