--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,8 +1,8 @@
 - title: "Zombies & Bullets"
   url: "games/zombies-and-bullets"
   icon: "zombies-and-bullets/logo.webp"
-  background: "#72b0de"
+  background: "transparent"
 - title: "Mole Maniacs"
   url: "games/mole-maniacs"
   icon: "mole-maniacs/logo.webp"
-  background: "#77529b"
+  background: "transparent"
