feat: add navbar anchors

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -1,6 +1,8 @@
-- title: "Home"
-  url: ""
-- title: "Games"
-  url: "games"
-- title: "About"
-  url: "about"
+- title: "home"
+  url: "/#"
+- title: "games"
+  url: "/#games"
+- title: "the-team"
+  url: "/#team"
+- title: "contact"
+  url: "/#contact"
